# cfg_global_scripts

./: generate_excel_columns.py  monitor_process.sh  nv.sh  rofi_openhue.sh  screenshot.sh  umpv.py
cppinit/cppTemplate/: .clang-format  .clangd  meson.build
cppinit/cppTemplate/src/: main.cpp  meson.build
tc_speakers/: .venv  aID.txt  aSecret.txt  devices.json  main.py  snapshot.json  tinytuya.json  tuya-raw.json
